# test-task-ai-coded-ad-dashboard-mvp

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  run.sh
.cursor/rules/: clean_architecture.mdc  error_handling_logging.mdc  file_organization.mdc  general_principles.mdc  project_setup.mdc  project_specific.mdc  pydantic_models.mdc  testing.mdc  type_hints_functions.mdc
aidocs/: ANALYTICS.md  AUTH.md  CAMPAIGN.md  DATABASE.md  FUNCTIONALITY.md  IMPLEMENTATION_PLAN.md  MODEL.md  STRUCTURE.md  TASK.md  UI.md
dashboard/: settings.py
dashboard/app/: main.py
dashboard/app/components/: __init__.py  analytics_charts.py  campaign_card.py  image_uploader.py  targeting_selector.py
dashboard/app/pages/: campaign_list.py  create_campaign.py  dashboard.py  login.py
dashboard/app/utils/: __init__.py  sample_data.py
dashboard/data/: __init__.py
dashboard/data/models/: __init__.py  ad_copy.py  analytics.py  campaign.py  targeting.py  user.py
dashboard/data/store/: __init__.py  ad_copy_store.py  analytics_store.py  banner_store.py  campaign_store.py  memory_store.py  targeting_store.py  user_store.py
dashboard/services/: __init__.py  analytics_service.py  openrouter_service.py
tests/: conftest.py
tests/app/components/: test_analytics_charts.py
tests/services/: test_analytics_service.py  test_openrouter_service.py
